<resources>
    <string name="app_name">Gemo-PD</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="date_format_card">dd/M/yyyy HH:mm:ss</string>
    <string name="date_format_file">yyyyy_M_dd_hh_mm_ss</string>
    <string name="title_activity_records">Sesiones</string>
    <string name="title_activity_session_in_progress">Sesión en curso</string>
    <string name="title_activity_session_new">Nueva sesión</string>
    <string name="change_history">Histórico</string>
    <string name="title_activity_session_finished">Sesión finalizada</string>
    <string name="title_activity_session_stored">Detalles</string>
    <string name="no_data_available">Aún no ha registrado ninguna sesión.</string>
    <string name="no_events_available_1">Aún no ha registrado ningún evento.</string>
    <string name="no_events_available_2">Pulse el botón</string>
    <string name="no_events_available_3">para iniciar la sesión.</string>
    <string name="no_events_available_4">No se ha registrado ningún evento en esta sesión.</string>
    <string name="no_events_available_5">Durante esta sesión no se registraron eventos.</string>
    <string name="no_device_connected">Debe sincronizar el reloj con el dispositivo para poder iniciar la sesion.</string>
    <string name="session_finished">Sesión finalizada</string>
    <string name="action_settings">Settings</string>
    <string name="start_session_instructions">Para iniciar la sesión, haga click en lanzar la captura en su Android Wear</string>
    <string name="start_session_instructions_error">No se puede abrir la aplicación en su Android Wear. Compruebe que el reloj está enlazado y la aplicación Gemo-PD instalada</string>
    <string name="title_activity_record_detail">RecordDetailActivity</string>
    <string name="error_creating_file">Se ha producido un error mientras se guardaban los datos del sensor.</string>

    <string name="hint_id">ID de la sesión</string>
    <string name="hint_info_sesion">Información de la sesión</string>
    <string name="hint_patient">Paciente</string>
    <string name="hint_patient_id">ID del paciente</string>
    <string name="hint_patient_name">Nombre</string>
    <string name="hint_patient_surname">Apellidos</string>
    <string name="hint_researcher">Investigador</string>
    <string name="hint_start">Comienzo</string>
    <string name="hint_end">Finalización</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_location">Localización</string>

    <string name="hint_info_sensor">Configuración del sensor</string>
    <string name="hint_acc_freq">Frecuencia de acelerometría</string>
    <string name="hint_data_size">Número de datos</string>
    <string name="hint_auto_sync">Sincronización automática</string>

    <string name="hint_info_wear">Información de Android Wear</string>
    <string name="hint_wear_id">ID</string>
    <string name="hint_wear_name">Nombre</string>
    <string name="hint_wear_version">Versión</string>

    <string name="delimiter">;_;</string>
    <string name="event_value_prefix">event_caught</string>

    <string name="path_prefix">/wear</string>
    <string name="launch_app_wear">/launch-app-wear</string>
    <string name="launch_app_wear_ack">/launch-app-wear-ack</string>
    <string name="launch_app_phone">/launch-app-phone</string>
    <string name="launch_app_phone_ack">/launch-app-phone-ack</string>
    <string name="session_started">/started</string>
    <string name="session_started_ack">/started-ack</string>
    <string name="session_stopped">/stopped</string>
    <string name="session_stopped_ack">/stopped-ack</string>
    <string name="start_session_local">/start-session-local</string>
    <string name="start_session_local_ack">/start-session-local-ack</string>
    <string name="stop_session_local">/stop-session-local</string>
    <string name="stop_session_local_ack">/stop-session-local-ack</string>
    <string name="preferences_changed">/preferences-changed</string>
    <string name="preferences_changed_ack">/preferences-changed-ack</string>
    <string name="record_data_map">/record-data-map</string>
    <string name="record_data_map_ack">/record-data-map-ack</string>
    <string name="session_file">/session-file</string>
    <string name="session_file_ack">/session-file-ack</string>
    <string name="session_file_asset">/session-file-asset</string>
    <string name="session_file_name">/session-file-name</string>
    <string name="new_event_received">/new-event-received</string>
    <string name="new_event_received_ack">/new-event-received_ack</string>
    <string name="get_state">/get-state</string>
    <string name="get_state_response">/get-state-response</string>
    <string name="state_running">running</string>
    <string name="state_stopped">stopped</string>

    <string name="file_prefix">sensordata</string>
    <string name="file_extension">.dat</string>
    <string name="file_folder">/IBiS/</string>
    <string name="graph_detail">Datos capturados</string>

    <string name="hint_record_no_value">(Vacío)</string>
    <string name="wear_connected">Dispositivo Android Wear conectado.</string>
    <string name="wear_not_connected">No se ha encontrado ningún dispositivo Android Wear.</string>
    <string name="info_synchronized">Información sincronizada correctamente.</string>
    <string name="info_synchronized_failed">Se ha producido un problema durante la sincronización.</string>
    <string name="err_msg_name_init">El campo</string>
    <string name="err_msg_name_end">no puede estar vacío</string>
    <string name="err_msg_name_end_number">debe contener un número</string>
    <string name="err_msg_name_end_date">no contiene una fecha válida</string>
    <string name="session_saved">Se han guardado los cambios correctamente</string>
    <string name="session_launched_snackbar">La sesión ha comenzado.</string>
    <string name="session_please_wait">Por favor, espere unos instantes mientras se sincroniza la información con el reloj.</string>
    <string name="session_please_wait_connecting">Estamos intendo conectar con el reloj. Si este proceso tarda más de 30 segundos, compruebe que el reloj está vinculado con el dispositivo y que la aplicación está instalada.</string>
    <string name="session_launch_problem_snackbar">Se ha producido un problema al iniciar la sesión en Android Wear.</string>
    <string name="session_finished_view">Sesión finalizada</string>
    <string name="session_finishing_view">Finalizando sesión</string>
    <string name="session_starting_view">Iniciando sesión</string>
    <string name="session_finished_snackbar">La sesión ha finalizado.</string>
    <string name="session_finish_problem_snackbar">Se ha producido un problema al detener la sesión en Android Wear.</string>
    <string name="session_new_saved">La sesión se ha guardado.</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="title_activity_record_data">RecordDataActivity</string>
    <string name="file_not_found">No se ha encontrado el archivo de esta sesión</string>
    <string name="no_data_available_session">No se han encontrado datos de esta sesión.</string>
    <string name="record_not_exists">El valor que desea mostrar no existe.</string>
    <string name="session_deleted">Se ha eliminado la sesión.</string>
    <string name="event_deleted">Se ha eliminado el evento.</string>
    <string name="undo_action">Deshacer</string>
    <string name="session_already_running_snackbar">Se han recuperado los datos de la sesión en curso.</string>
    <string name="alert_dialog_in_progress_question">¿Está seguro de que desea salir sin finalizar la sesión?</string>
    <string name="alert_dialog_in_progress_positive">Salir sin guardar</string>
    <string name="alert_dialog_in_progress_negative">Volver a la sesión</string>
    <string name="remove">Eliminar</string>
    <string name="details">Detalles</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="header_title">Gemo-PD</string>
    <string name="header_subtitle">IBiS y Universidad de Sevilla</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_sync">Sincronizar registros</string>
    <string name="nav_close_session">Cerrar sesión</string>
    <string name="nav_sessions">Sesiones</string>
</resources>
