<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_sessions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting_light"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@android:drawable/stat_notify_sync_noanim"
            android:title="@string/nav_sync" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/stat_sys_upload_done"
            android:title="@string/nav_close_session" />
    </group>

</menu>
