<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/events"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".progress.SessionInProgressActivity"
    tools:showIn="@layout/activity_session_in_progress">

    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/common_google_signin_btn_text_dark_disabled"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvChronoHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/session_finished_view"
        android:textColor="@color/common_google_signin_btn_text_dark_disabled"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_orange_dark"></LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshsession"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/noeventslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/session_started"
            android:id="@+id/image_no_events"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/head_brain" />

        <TextView
            android:id="@+id/no_events_registered_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_events_available_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/startSessionAuxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_events_available_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/startSessionAux"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/ic_media_play"
                        app:backgroundTint="@android:color/holo_green_dark"
                        app:borderWidth="0dp"
                        app:layout_anchor="@id/app_bar"
                        app:layout_anchorGravity="bottom|end" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_events_available_3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
